# SYNOID

./: .cargo-watch.toml  .env.example  .gitignore  .ignore  .watchignore  AUDIT.md  CUDA_AGENT_SETUP.md  CUDA_TEST_SUMMARY.md  Cargo.toml  LICENSE.md  README.md  SMART_WATCH.md  SYNOID_ROADMAP.txt  TECHNICAL_DESIGN.md  TEST_SMART_WATCH.md  Terminal_Output.txt  WATCH_SUMMARY.md  build.rs  build.sh  build_errors.txt  build_errors_final.txt  check_log.txt  editing_strategy.json  improve_program.md  output.txt  package-lock.json  payload.json  quick_cuda_test.rs  refactor.py  rust-toolchain.toml  settings.json  synoid_intent.txt  synoid_intent_default.txt  synoid_settings_3001.json  synoid_settings_default.json  teach.ps1  teach_utf8_check.tmp  teal_orange.cube  verify_cuda_agent.ps1  verify_security_fix  (+2 more)
.agent/rules/: agentstructure.md
.agent/skills/remotion-best-practices/: SKILL.md
.claude/: settings.json  settings.local.json
.github/workflows/: rust.yml
.jules/: sentinel.md
Video/: output.srt
cortex_cache/: TIMELESS _ Call of Duty Montage.f140.m4a
cortex_cache_3001/: learned_styles.md  learner_state.json  neuroplasticity.json
dashboard/: index.html  viewer.html  watch.html
docs/: Builder_Prompt.md  CUDA_AGENT_TEST_RESULTS.md  README.md  REPRODUCTION.md
docs/design/: AGENTS.md  AUDIT.md  INSTRUCTIONS.md  TECHNICAL_DESIGN.md  design-system.html  sitemap.md
docs/integration/: BRAIN_INTEGRATION_EXAMPLE.md  CUDA_AGENT_INTEGRATION.md  INTEGRATION_COMPLETE.md  INTEGRATION_SUMMARY.md
docs/mockups/: dashboard.html  editor.html
editor/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
editor/src/: App.tsx  api.ts  index.css  types.ts
editor/src/components/: DirectorPanel.tsx  MediaBin.tsx  PreviewPanel.tsx  PropertiesPanel.tsx  RenderModal.tsx  Timeline.tsx
editor/src/hooks/: useProject.ts
editor/src/pages/: Editor.tsx
examples/: cuda_agent_demo.rs
mock_glib/: glib-2.0.pc
mock_pkgconfig/: alsa.pc  atk.pc  cairo.pc  gdk-3.0.pc  gdk-pixbuf-2.0.pc  gio-2.0.pc  glib-2.0.pc  gobject-2.0.pc  gtk+-3.0.pc  pango.pc
remotion-engine/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion-engine/src/: DynamicAnimation.tsx  Root.tsx  effects.tsx  index.ts  index.tsx  scenes.tsx
remotion-engine/src/components/: Scene3D.tsx
remotion-engine/src/templates/: AnimatedText.tsx  CallToAction.tsx  Comparison.tsx  Counter.tsx  DataChart.tsx  LogoReveal.tsx  LowerThird.tsx  ProgressBar.tsx  ScreenFrame.tsx  SocialProof.tsx  ZoomPan.tsx  index.ts
scripts/: transcribe_bridge.py
src/: editor_api.rs  gpu_backend.rs  lib.rs  main.rs  net.rs  server.rs  state.rs  window.rs
src/agent/: animator.rs  audio_tools.rs  autonomous_learner.rs  body.rs  brain.rs  consciousness.rs  core.rs  defense.rs  download_guard.rs  editor_queue.rs  global_discovery.rs  gpt_oss_bridge.rs  health.rs  hive_mind.rs  io_shield.rs  learning.rs  llm_provider.rs  mod.rs  moe.rs  motor_cortex.rs  multi_agent.rs  multicam.rs  muxer.rs  neuroplasticity.rs  process_utils.rs  production_tools.rs  reasoning.rs  recovery.rs  research_tools.rs  smart_editor.rs  source_tools.rs  super_engine.rs  supervisor.rs  token_optimizer.rs  transcription.rs  unified_pipeline.rs  upscale_engine.rs  validation_gate.rs  vector_engine.rs  vector_video.rs  (+5 more)
src/agent/academy/: code_scanner.rs  mod.rs  url_reader.rs
src/agent/ai_systems/: gemma4_harness.rs  gpt_oss_bridge.rs  hive_mind.rs  llm_provider.rs  moe.rs  multi_agent.rs  react_agent.rs  turbo_quant.rs
src/agent/core_systems/: autonomous_learner.rs  body.rs  brain.rs  core.rs  gepa.rs  health.rs  learning.rs  trajectory.rs
src/agent/cuda/: cuda_kernel_gen.rs  cuda_pipeline.rs  latent_optimizer.rs
src/agent/defense/: file_integrity.rs  mod.rs  pressure.rs  sentinel.rs  signals.rs
src/agent/engines/: editor_queue.rs  motor_cortex.rs  super_engine.rs  unified_pipeline.rs
src/agent/security/: download_guard.rs  io_shield.rs  recovery.rs  validation_gate.rs
src/agent/smart_editor/: filter_ops.rs  mod.rs  scene_ops.rs  types.rs  (+1 more)
src/agents/: director.rs  editor.rs  mod.rs  sentinel.rs  upscaler.rs  voice_artist.rs
src/ai/: mod.rs
src/engine/: graph.rs  mod.rs
src/engines/: mod.rs
src/funny_engine/: analyzer.rs  commentator.rs  injector.rs  mod.rs
src/interface/: mod.rs
src/io/: mod.rs
src/kernel/: event_bus.rs  mod.rs  scheduler.rs  state_machine.rs
tests/: brain_learning.rs  cuda_agent_test.rs  cuda_verification.rs  ffmpeg_operations.rs  intent_repro.rs  profanity_test.rs  security_auth_test.rs  smart_edit_unit.rs
tests/examples/: test_ytdlp.rs
tools/: synoid_tts.py  transcribe.py
video/: Outbound.srt  Outbound_edited.srt  OutboundnGnome.mp4.srt  OutboundnGnome_edited.srt  OutboundnGnome_edited.temp.srt  output.srt  synoid_subtitles.srt
video/synoid_temp_a33c9c7b/: scene_fingerprint.txt
(+73 files in other folders)
