[package]
name = "synoid-core"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
regex = "1.10"
rayon = "1.7"
reqwest = { version = "0.11", features = ["json"] }
eframe = { version = "0.29.1", features = ["wgpu"] }
rfd = "0.13"
image = "0.24"
scraper = "0.19"
sysinfo = "0.29" # System monitoring (Processes/RAM)
sha2 = "0.10"    # File integrity hashing
walkdir = "2.3"  # Efficient directory traversal
num_cpus = "1.0"

# Transcription Engine (Whisper)
whisper-rs = { version = "0.11.1", features = ["cuda"] } # Native Whisper implementation (GPU accelerated)
hf-hub = "0.3"    # HuggingFace model downloads
hound = "3.5"     # WAV file writing
dirs = "5.0"      # Platform cache directories
url = "2.5.8"

# GPU Acceleration: FFmpeg NVENC + Custom CUDA Kernels
# cudarc = { version = "0.18.2", features = ["cuda-version-from-build-system", "driver"] }

# Web Server & Dashboard API
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = { version = "0.4", features = ["util"] }
petgraph = "0.8.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
